# swagger-output.json
@@ -1299,6 +1299,36 @@
         ]
       }
     },
+    "/panel_analytical/info_values_os_paid": {
+      "get": {
+        "tags": [
+          "Paineis de Analíticos"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Não autorizado"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/tools/notifications": {
       "get": {
         "tags": [
